--- a/BSM/BSM/Form1.resx
+++ b/BSM/BSM/Form1.resx
@@ -141,7 +141,7 @@
   <metadata name="updateTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>196, 12</value>
   </metadata>
-  <metadata name="browseBoneworksTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>303, 12</value>
+  <metadata name="browseBSMTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>470, 12</value>
   </metadata>
 </root>
